// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if disabled attribute on button next is toggled: If disabled 1`] = `
{
  "disabled": true,
  "name": "Next page",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree if disabled attribute on button next is toggled: If not disabled 1`] = `
{
  "name": "Next page",
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "disabled": true,
              "name": "Previous page",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "1",
                  "role": "StaticText",
                },
              ],
              "name": "Page 1",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "role": "none",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "2",
                  "role": "StaticText",
                },
              ],
              "name": "Page 2",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "3",
                  "role": "StaticText",
                },
              ],
              "name": "Page 3",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "4",
                  "role": "StaticText",
                },
              ],
              "name": "Page 4",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "5",
                  "role": "StaticText",
                },
              ],
              "name": "Page 5",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "name": "…",
                      "role": "StaticText",
                    },
                  ],
                  "name": "",
                  "role": "generic",
                },
              ],
              "role": "none",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "20",
                  "role": "StaticText",
                },
              ],
              "name": "Page 20",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "name": "Next page",
              "role": "button",
            },
          ],
          "level": 1,
          "name": "",
          "role": "listitem",
        },
      ],
      "name": "",
      "role": "list",
    },
  ],
  "name": "Pagination",
  "role": "navigation",
}
`;
